app/components/molecules/card/card-event/index.module.css
.meta {
  display: flex;
  gap: 12px;
  color: #888;
  font-size: 12px;
}

.title{
  margin: 0.5rem 0 !important;
}

.submitted {
  font-family: var(--font-body);
  color: var(--gray-8);
  font-size: 14px;
  margin-bottom: 0 !important;
}

 .draftCard.draftCard:hover {
    border-color: var(--sea-green-5) !important;
}

.reviewCard.reviewCard:hover {
    border-color: var(--gold-5) !important;
}

.approvedCard.approvedCard:hover {
    border-color: var(--green-6) !important;
}

.cancelledCard.cancelledCard:hover {
    border-color: var(--gray-8) !important;
}

.pastCard.pastCard:hover {
    border-color: var(--gray-7) !important;
}

.noHover {
    box-shadow: none !important;
}

.noHover:hover {
    box-shadow: none !important;
    border-color: inherit !important;
}

.card {
    box-shadow: none !important;
}

.card:hover {
    box-shadow: none !important;
}

.moreButton {
    background: none;
    border: none;

    padding: 0;
    display: inline-flex;
    align-items: center;
    cursor: pointer;
    color: inherit;
}

.moreButton:focus-visible {
    outline: 2px solid var(--accent-gray-light-2);
    outline-offset: 2px;
}

.modalContent {
    border-radius: 0 !important;
    padding: 0 !important;
}

.modalContainer {
    display: grid;
    grid-template-columns: auto 1fr;
    padding: 2rem 2rem 1.5rem 2rem;
    align-items: flex-start;
    gap: 0.75rem;
}

.modalBody {
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.modalHeader {
    display: flex;
    flex-direction: column;
    width: 100%;
    gap: 0.5rem;
}

.modalMessage {
    font-family: var(--font-body);
    color: var(--gray-8);
    font-size: 14px;
    margin: 0;
}

.modalIcon {
    display: flex;
    align-self: start;
}

.noHover.draftCard:hover,
.noHover.reviewCard:hover,
.noHover.approvedCard:hover,
.noHover.cancelledCard:hover,
.noHover.pastCard:hover {
    border-color: var(--accent-gray-light-2) !important;
}

.card :global(.ant-card-body) {
    display: flex;
    flex-direction: column;
    height: 100%;
}

